[package]
name = "rust-os"
version = "0.0.1"
authors = ["Adarsh Krishnan <adarshk7@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.8.8"
